--- a/front/moviering_front/package.json
+++ b/front/moviering_front/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue-star-rating": "^1.7.0",
     "vue3-carousel": "^0.3.3"
   },
   "devDependencies": {
